@@ -1,4 +1,5 @@
 5.1
+ * Fix StorageService::constructRangeToEndpointMap for non-distributed keyspaces (CASSANDRA-19255)
  * Group nodetool cms commands into single command group (CASSANDRA-19393)
  * Register the measurements of the bootstrap process as Dropwizard metrics (CASSANDRA-19447)
  * Add LIST SUPERUSERS CQL statement (CASSANDRA-19417)
